Fixes scaling code so images are crisp on Mobile Safari 8.4.
The "image-rendering: pixelated" feature doesn't work for background
images. Fortunately, I'm precompositing all my sprites in JavaScript
so no background images needed. It's just image tags all the way.

--- a/css/game.css
+++ b/css/game.css
@@ -41,13 +41,14 @@ body {
   display: block;
   width: 80px;
   height: 80px;
-  image-rendering: -webkit-optimize-contrast;
-  image-rendering: -webkit-crisp-edges;
+}
+.pixelated {
+  image-rendering: optimizeSpped;
   image-rendering: -moz-crisp-edges;
-  image-rendering: -o-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: optimize-contrast;
   image-rendering: pixelated;
-  background-repeat: no-repeat;
-  background-size: cover;
+  image-rendering: -ms-interpolation-mode: nearest-neighbor;
 }
 .girl {
   background-image: url('/img/character-girl.png');
